--- a/functions/roomDetail/package.json
+++ b/functions/roomDetail/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "study",
+  "name": "roomDetail",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dayjs": "^1.9.4",
-    "wx-server-sdk": "^2.3.2"
+    "wx-server-sdk": "~2.3.2"
   }
 }
