--- a/app.json
+++ b/app.json
@@ -4,7 +4,9 @@
     "pages/booked/booked",
     "pages/timeSet/timeSet",
     "pages/test2/test2",
-    "pages/meetingroom/meetingroom"
+    "pages/meetingroom/meetingroom",
+    "pages/index/index",
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "light",
