--- a/app.json
+++ b/app.json
@@ -6,7 +6,8 @@
     "pages/test2/test2",
     "pages/meetingroom/meetingroom",
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/today/today"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -19,7 +20,13 @@
   "tabBar": {
     "list": [
       {
-        "pagePath": "pages/calendar/calendar",
+        "pagePath":"pages/today/today",
+        "text":"日程",
+        "iconPath":"image/today.png",
+        "selectedIconPath":"image/todayselected.png"
+      },
+      {
+        "pagePath":"pages/calendar/calendar",
         "text": "会议室",
         "iconPath": "image/tarBar1.png",
         "selectedIconPath": "image/tarBarSelected1.png"
