--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
   "pages": [
     "pages/calendar/calendar",
+    "pages/signIn/signIn",
+    "pages/today/today",
     "pages/booked/booked",
     "pages/timeSet/timeSet",
-    "pages/test2/test2",
-    "pages/meetingroom/meetingroom",
+    "pages/person/person",
     "pages/index/index",
-    "pages/logs/logs",
-    "pages/today/today"
+    "pages/logs/logs"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -32,7 +33,7 @@
         "selectedIconPath": "image/tarBarSelected1.png"
       },
       {
-        "pagePath": "pages/test2/test2",
+        "pagePath": "pages/person/person",
         "text": "个人中心",
         "iconPath": "image/tarbar2.png",
         "selectedIconPath": "image/tarbarselected2.png"
